feat: Refactor project structure, update dependencies, and enhance client-related functionality